# research-intelligence

./: .gitignore  AGENTS.md  LICENSE  README.md  codex-task-0-bootstrap.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
companion/: pyproject.toml  requirements-dev.txt
companion/packaging/: README.md  research-intelligence-companion.spec
companion/src/research_intelligence_companion/: __main__.py  app.py  device.py  keychain.py  models.py  profile_learning.py  security.py  settings.py  spikes.py  workspace.py
companion/tests/: conftest.py  test_api.py  test_keychain.py  test_response_schemas.py  test_security.py  test_task2_workspace_foundation.py  test_task3a_project_lifecycle.py  test_task3b_research_profile.py  test_task3c_profile_learning.py  test_workspace.py
docs/: acceptance-tests.md  ai-processing.md  architecture.md  data-model.md  discovery.md  engineering-governance.md  feature-status-model.md  frontend-specification.md  institutional-access.md  integration-checkpoints.md  local-api.md  local-development.md  mvp-scope.md  navigation-map.md  pairing-flow.md  privacy-security.md  product-overview.md  reading-system.md  research-intelligence-build-spec-v0.1.md  roadmap.md  task-0-known-limitations.md  task-0-security-assumptions.md  task-0-spike-results.md  task-2-workspace-foundation-results.md  task-3a-project-lifecycle-results.md  task-3b-research-profile-results.md  task-3c-profile-learning-results.md  traceability-matrix.md  user-flows.md  workspace-atomic-writes.md  workspace-format.md
scripts/: run_pwa_loopback_spike.mjs  validate_schemas.py
(+50 files in other folders)
